# tos-llm

./: README.md  config.template.yaml  out.txt  pyproject.toml  test.py
.litellm_cache/: cache.db
notebooks/: neo4j.ipynb  tos30_section_clustering.ipynb
src/tos/: datamodel.py  readers.py  utils.py
src/tos/core/: config.py  llm.py  utils.py
src/tos/markdown/: formatter.py
src/tos/ml/: __init__.py  interfaces.py  lexglue_bert.py
src/tos/models/: content_extractor.py
src/tos/ontology/: unfair_terms.py  unfair_terms_v2.py  utdo.py
src/tos/resources/datasets/: tos_content_dataset.json  tos_url_list.txt
src/tos/resources/ontologies/: ODRL20.ttl  ODRL20.ttl_terms.tsv  term.yaml  unfair_terms.yaml  unfair_terms_v2.yaml  utdo.py  utdo.yaml
src/tos/resources/ontologies/.litellm_cache/: cache.db
src/tos/resources/prompts/: ontology_extract_action_targets_system.txt  terms_to_markdown_and_cleaned.txt  unfair_terms_arbitration.txt  unfair_terms_choice_of_law.txt  unfair_terms_content_removal.txt  unfair_terms_contract_by_using.txt  unfair_terms_jurisdiction.txt  unfair_terms_limitation_of_liability.txt  unfair_terms_ontology_generation.txt  unfair_terms_unilateral_change.txt  unfair_terms_unilateral_termination.txt
src/tos/scraping/: __init__.py  preprocessing.py  scraper.py  scrapers.py  utils.py
src/tos/unfair_terms/: topic_detector.py  unfairness_checker.py
tosl/: tosl.ttl  tosl_v1.0.properties
