[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tos"
version = "0.0.1"
authors = [
  { name="José María Cruz Lorite", email="josemariacruzlorite@gmail.com" },
]
description = "This package provides a set of prompts, as well as a set of utilities to work with Terms of Service."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "pydantic",
    "jinja2"
]

[project.scripts]
run = "bin:run"

[tool.setuptools.package-data]
"*" = ['*.json', "*.txt"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

